benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_Add_ModExpPow2_Zeroes_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_ModExpPow2_Zeroes.rs
Time: 2025-09-15 20:40:48

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:30:9
   |
24 | exec fn str_to_int_exec(s: &[char]) -> (res: nat)
   |                                              --- expected `vstd::prelude::nat` because of return type
...
30 |         0
   |         ^ expected `nat`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:35:11
   |
35 |         2 * rest_val + (if last == '1' { 1 } else { 0 })
   |           ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:42:13
   |
42 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:45:31
   |
45 |         let last_bit = if n % 2 == 1 { '1' } else { '0' };
   |                           -   ^ expected `nat`, found integer
   |                           |
   |                           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:45:36
   |
45 |         let last_bit = if n % 2 == 1 { '1' } else { '0' };
   |                           -----    ^ expected `nat`, found integer
   |                           |
   |                           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:46:40
   |
46 |         let rest = int_to_str_exec(n / 2);
   |                                    -   ^ expected `nat`, found integer
   |                                    |
   |                                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:59:9
   |
53 | exec fn mod_exp_right_to_left(base: nat, exponent: &[char], modulus: nat) -> (res: nat)
   |                                                                                    --- expected `vstd::prelude::nat` because of return type
...
59 |         1
   |         ^ expected `nat`, found integer

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:30:9
   |
24 | exec fn str_to_int_exec(s: &[char]) -> (res: nat)
   |                                              --- expected `vstd::prelude::nat` because of return type
...
30 |         0
   |         ^ expected `nat`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:35:11
   |
35 |         2 * rest_val + (if last == '1' { 1 } else { 0 })
   |           ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:42:13
   |
42 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:45:31
   |
45 |         let last_bit = if n % 2 == 1 { '1' } else { '0' };
   |                           -   ^ expected `nat`, found integer
   |                           |
   |                           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:45:36
   |
45 |         let last_bit = if n % 2 == 1 { '1' } else { '0' };
   |                           -----    ^ expected `nat`, found integer
   |                           |
   |                           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:46:40
   |
46 |         let rest = int_to_str_exec(n / 2);
   |                                    -   ^ expected `nat`, found integer
   |                                    |
   |                                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Add_ModExpPow2_Zeroes_impl.rs:59:9
   |
53 | exec fn mod_exp_right_to_left(base: nat, exponent: &[char], modulus: nat) -> (res: nat)
   |                                                                                    --- expected `vstd::prelude::nat` because of return type
...
59 |         1
   |         ^ expected `nat`, found integer

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
